[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UI/AchievementPage.gd" type="Script" id=1]
[ext_resource path="res://Resources/Screens/rewardsbg.png" type="Texture" id=2]
[ext_resource path="res://Resources/Fonts/Anton/Anton-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Resources/Screens/StoryScreens/Screenshot 2025-05-30 153156.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 29
font_data = ExtResource( 3 )

[node name="AchievementPage" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Rewardsbg" type="Sprite" parent="."]
position = Vector2( 321, 179.5 )
scale = Vector2( 0.424479, 0.358398 )
texture = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 0.986
anchor_bottom = 0.963
margin_left = 105.0
margin_top = 39.0
margin_right = -82.04
margin_bottom = -26.68
color = Color( 0, 0, 0, 0.47451 )

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
margin_left = 22.0
margin_top = 57.0
margin_right = 422.0
margin_bottom = 59.0

[node name="ColorRect2" type="ColorRect" parent="ColorRect"]
margin_left = 20.0
margin_top = 192.0
margin_right = 420.0
margin_bottom = 194.0

[node name="Rewards" type="Label" parent="."]
margin_left = 261.0
margin_top = 47.0
margin_right = 397.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 1 )
text = "Total Score"
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 126.0
margin_top = 113.0
margin_right = 299.0
margin_bottom = 213.0

[node name="EnemiesKilledLabel" type="Label" parent="VBoxContainer"]
margin_right = 173.0
margin_bottom = 14.0
text = "Enemies Killed: "

[node name="MiniBossLabel" type="Label" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 173.0
margin_bottom = 32.0
text = "Mini Boss Defeated:"

[node name="BossLabel" type="Label" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 173.0
margin_bottom = 50.0
text = "Boss Defeated:"

[node name="JournalLabel" type="Label" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 173.0
margin_bottom = 68.0
text = "Journal Pages Collected: "

[node name="SkullsLabel" type="Label" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 173.0
margin_bottom = 86.0
text = "Skulls Collected:"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 475.0
margin_top = 109.0
margin_right = 525.0
margin_bottom = 222.0
rect_pivot_offset = Vector2( -601, -70 )

[node name="Score1" type="Label" parent="VBoxContainer2"]
margin_right = 50.0
margin_bottom = 14.0

[node name="Score2" type="Label" parent="VBoxContainer2"]
margin_top = 18.0
margin_right = 50.0
margin_bottom = 32.0

[node name="Score3" type="Label" parent="VBoxContainer2"]
margin_top = 36.0
margin_right = 50.0
margin_bottom = 50.0

[node name="Score4" type="Label" parent="VBoxContainer2"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 68.0

[node name="Score5" type="Label" parent="VBoxContainer2"]
margin_top = 72.0
margin_right = 50.0
margin_bottom = 86.0

[node name="Screenshot2025-05-30153156" type="Sprite" parent="."]
position = Vector2( 325, 297 )
scale = Vector2( 0.182222, 0.240964 )
texture = ExtResource( 4 )

[node name="MainMenuBtn" type="Button" parent="Screenshot2025-05-30153156"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -225.0
margin_top = -42.0
margin_right = 225.0
margin_bottom = 41.0

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
margin_left = 251.0
margin_top = 253.0
margin_right = 399.0
margin_bottom = 279.0

[node name="Total" type="Label" parent="VBoxContainer3"]
margin_right = 148.0
margin_bottom = 14.0

[connection signal="pressed" from="Screenshot2025-05-30153156/MainMenuBtn" to="." method="_on_MainMenuBtn_pressed"]
